small layout fix groupttable page aligning logo and logout button

--- a/miraBeauWebApp/src/pages/groupTable/group-page.css
+++ b/miraBeauWebApp/src/pages/groupTable/group-page.css
@@ -107,7 +107,8 @@
 .logoutButton {
   box-shadow: 1px 1px 12px black;
   float: right;
-  padding-top:0px;
+  padding-top:0;
+  margin-top:-50px;
 }
 
 .button {
@@ -136,6 +137,7 @@
 
 .logo {
   width:300px;
+  float:left;
 }
 
 @media only screen and (max-width: 760px) {
@@ -156,6 +158,7 @@
 
   .logo {
     width:250px;
+    float:left;
   }
 
   .button {
